tests/snapshots/generated_from_inputs__good_bool_calls.snap
---
source: tests/fixtures.rs
description: "boolean blah(int x, int y) {\n    boolean z = x == y;\n    if (!z) {\n        printInt(x);\n        printInt(y);\n        return false;\n    }\n    return true;\n}\n\nint main() {\n    (blah(1, 1) && blah(1, 2)) || blah(5, 5);\n    return 0;\n}"
input_file: inputs/good/bool_calls.lat
---
; ModuleID = 'bool_calls'
source_filename = "bool_calls"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i1 @latte_user_blah(i32 %0, i32 %1) {
b0:
  %v2 = icmp eq i32 %0, %1
  %v3 = xor i1 %v2, true
  br i1 %v3, label %b1, label %b2

b2:                                               ; preds = %b0
  ret i1 true

b1:                                               ; preds = %b0
  call void @printInt(i32 %0)
  call void @printInt(i32 %1)
  ret i1 false
}

define i32 @main() {
b0:
  %latte_user_blah = call i1 @latte_user_blah(i32 1, i32 1)
  br i1 %latte_user_blah, label %b1, label %b2

b1:                                               ; preds = %b0
  %latte_user_blah1 = call i1 @latte_user_blah(i32 1, i32 2)
  br label %b2

b2:                                               ; preds = %b1, %b0
  %v6 = phi i1 [ %latte_user_blah, %b0 ], [ %latte_user_blah1, %b1 ]
  br i1 %v6, label %b4, label %b3

b3:                                               ; preds = %b2
  %latte_user_blah2 = call i1 @latte_user_blah(i32 5, i32 5)
  br label %b4

b4:                                               ; preds = %b3, %b2
  %v10 = phi i1 [ %v6, %b2 ], [ %latte_user_blah2, %b3 ]
  ret i32 0
}

