tests/snapshots/generated_from_inputs__good_bool_operations.snap
---
source: tests/fixtures.rs
description: "// Author: Tomasz Wysocki 277696\nint main() {\n    b(t(1) && f(2));\n    b(t(3) && t(4));\n    b(t(5) || t(6));\n    b(f(7) && t(8));\n    b(t(9) && t(10) && t(11));\n    b(f(12) || f(13) && t(14));\n    return 0;\n}\n\nboolean f(int a) {\n    printInt(a);\n    return false;\n}\nboolean t(int a) {\n    return !f(a);\n}\nvoid b(boolean a) {\n    if(a)\n        printString(\"true\");\n    else\n        printString(\"false\");\n}\n"
input_file: inputs/good/bool_operations.lat
---
; ModuleID = 'bool_operations'
source_filename = "bool_operations"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define void @latte_user_b(i1 %0) {
b0:
  br i1 %0, label %b1, label %b2

b2:                                               ; preds = %b0
  %str_ptr = alloca [5 x i8], align 1
  store [5 x i8] c"false", [5 x i8]* %str_ptr, align 1
  %str_ptr1 = bitcast [5 x i8]* %str_ptr to i8*
  %new_string = call %string* @newString(i8* %str_ptr1, i32 5)
  call void @printString(%string* %new_string)
  br label %b3

b1:                                               ; preds = %b0
  %str_ptr2 = alloca [4 x i8], align 1
  store [4 x i8] c"true", [4 x i8]* %str_ptr2, align 1
  %str_ptr3 = bitcast [4 x i8]* %str_ptr2 to i8*
  %new_string4 = call %string* @newString(i8* %str_ptr3, i32 4)
  call void @printString(%string* %new_string4)
  br label %b3

b3:                                               ; preds = %b1, %b2
  ret void
}

define i1 @latte_user_f(i32 %0) {
b0:
  call void @printInt(i32 %0)
  ret i1 false
}

define i32 @main() {
b0:
  %latte_user_t = call i1 @latte_user_t(i32 1)
  br i1 %latte_user_t, label %b1, label %b2

b1:                                               ; preds = %b0
  %latte_user_f = call i1 @latte_user_f(i32 2)
  br label %b2

b2:                                               ; preds = %b1, %b0
  %v4 = phi i1 [ %latte_user_t, %b0 ], [ %latte_user_f, %b1 ]
  call void @latte_user_b(i1 %v4)
  %latte_user_t1 = call i1 @latte_user_t(i32 3)
  br i1 %latte_user_t1, label %b3, label %b4

b3:                                               ; preds = %b2
  %latte_user_t2 = call i1 @latte_user_t(i32 4)
  br label %b4

b4:                                               ; preds = %b3, %b2
  %v10 = phi i1 [ %latte_user_t1, %b2 ], [ %latte_user_t2, %b3 ]
  call void @latte_user_b(i1 %v10)
  %latte_user_t3 = call i1 @latte_user_t(i32 5)
  br i1 %latte_user_t3, label %b6, label %b5

b5:                                               ; preds = %b4
  %latte_user_t4 = call i1 @latte_user_t(i32 6)
  br label %b6

b6:                                               ; preds = %b5, %b4
  %v16 = phi i1 [ %latte_user_t3, %b4 ], [ %latte_user_t4, %b5 ]
  call void @latte_user_b(i1 %v16)
  %latte_user_f5 = call i1 @latte_user_f(i32 7)
  br i1 %latte_user_f5, label %b7, label %b8

b7:                                               ; preds = %b6
  %latte_user_t6 = call i1 @latte_user_t(i32 8)
  br label %b8

b8:                                               ; preds = %b7, %b6
  %v22 = phi i1 [ %latte_user_f5, %b6 ], [ %latte_user_t6, %b7 ]
  call void @latte_user_b(i1 %v22)
  %latte_user_t7 = call i1 @latte_user_t(i32 9)
  br i1 %latte_user_t7, label %b9, label %b10

b9:                                               ; preds = %b8
  %latte_user_t8 = call i1 @latte_user_t(i32 10)
  br label %b10

b10:                                              ; preds = %b9, %b8
  %v28 = phi i1 [ %latte_user_t7, %b8 ], [ %latte_user_t8, %b9 ]
  br i1 %v28, label %b11, label %b12

b11:                                              ; preds = %b10
  %latte_user_t9 = call i1 @latte_user_t(i32 11)
  br label %b12

b12:                                              ; preds = %b11, %b10
  %v31 = phi i1 [ %v28, %b10 ], [ %latte_user_t9, %b11 ]
  call void @latte_user_b(i1 %v31)
  %latte_user_f10 = call i1 @latte_user_f(i32 12)
  br i1 %latte_user_f10, label %b14, label %b13

b13:                                              ; preds = %b12
  %latte_user_f11 = call i1 @latte_user_f(i32 13)
  br i1 %latte_user_f11, label %b15, label %b16

b15:                                              ; preds = %b13
  %latte_user_t12 = call i1 @latte_user_t(i32 14)
  br label %b16

b16:                                              ; preds = %b15, %b13
  %v39 = phi i1 [ %latte_user_f11, %b13 ], [ %latte_user_t12, %b15 ]
  br label %b14

b14:                                              ; preds = %b16, %b12
  %v40 = phi i1 [ %latte_user_f10, %b12 ], [ %v39, %b16 ]
  call void @latte_user_b(i1 %v40)
  ret i32 0
}

define i1 @latte_user_t(i32 %0) {
b0:
  %latte_user_f = call i1 @latte_user_f(i32 %0)
  %v2 = xor i1 %latte_user_f, true
  ret i1 %v2
}

