tests/snapshots/generated_from_inputs__good_bool_overoptimization.snap
---
source: tests/fixtures.rs
description: "// Author: Tomasz Wysocki 277696\nint main() {\n    print() && false;\n    return 0;\n}\n\nboolean print() {\n    printString(\"ahoj\");\n    return true;\n}\n"
input_file: inputs/good/bool_overoptimization.lat
---
; ModuleID = 'bool_overoptimization'
source_filename = "bool_overoptimization"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @main() {
b0:
  %latte_user_print = call i1 @latte_user_print()
  br i1 %latte_user_print, label %b1, label %b2

b1:                                               ; preds = %b0
  br label %b2

b2:                                               ; preds = %b1, %b0
  %v2 = phi i1 [ %latte_user_print, %b0 ], [ false, %b1 ]
  ret i32 0
}

define i1 @latte_user_print() {
b0:
  %str_ptr = alloca [4 x i8], align 1
  store [4 x i8] c"ahoj", [4 x i8]* %str_ptr, align 1
  %str_ptr1 = bitcast [4 x i8]* %str_ptr to i8*
  %new_string = call %string* @newString(i8* %str_ptr1, i32 4)
  call void @printString(%string* %new_string)
  ret i1 true
}

