tests/snapshots/generated_from_inputs__good_call_by_value.snap
---
source: tests/fixtures.rs
description: "void test(int param) {\n    param++;\n    printInt(param);\n}\n\nint main() {\n    int a = 1;\n    test(a);\n    printInt(a);\n    return 0;\n}"
input_file: inputs/good/call_by_value.lat
---
; ModuleID = 'call_by_value'
source_filename = "call_by_value"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @main() {
b0:
  call void @latte_user_test(i32 1)
  call void @printInt(i32 1)
  ret i32 0
}

define void @latte_user_test(i32 %0) {
b0:
  %v2 = add i32 %0, 1
  call void @printInt(i32 %v2)
  ret void
}

