tests/snapshots/generated_from_inputs__good_compare.snap
---
source: tests/fixtures.rs
description: "// Author: Tomasz Wysocki 277696\nint main() {\n    if(1 <= 1)\n        printString(\"4\");\n    if(1 >= 1)\n        printString(\"4\");\n    if(1 > 1)\n        printString(\"5\");\n    if(1 < 1)\n        printString(\"5\");\n    if(1 < 2)\n        printString(\"6\");\n    if(2 > 1)\n        printString(\"6\");\n    if(1 > 2)\n        printString(\"7\");\n    if(2 < 1)\n        printString(\"7\");\n    return 0;\n}\n"
input_file: inputs/good/compare.lat
---
; ModuleID = 'compare'
source_filename = "compare"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @main() {
b0:
  br i1 true, label %b1, label %b2

b1:                                               ; preds = %b0
  %str_ptr = alloca [1 x i8], align 1
  store [1 x i8] c"4", [1 x i8]* %str_ptr, align 1
  %str_ptr1 = bitcast [1 x i8]* %str_ptr to i8*
  %new_string = call %string* @newString(i8* %str_ptr1, i32 1)
  call void @printString(%string* %new_string)
  br label %b2

b2:                                               ; preds = %b1, %b0
  br i1 true, label %b3, label %b4

b3:                                               ; preds = %b2
  %str_ptr2 = alloca [1 x i8], align 1
  store [1 x i8] c"4", [1 x i8]* %str_ptr2, align 1
  %str_ptr3 = bitcast [1 x i8]* %str_ptr2 to i8*
  %new_string4 = call %string* @newString(i8* %str_ptr3, i32 1)
  call void @printString(%string* %new_string4)
  br label %b4

b4:                                               ; preds = %b3, %b2
  br i1 false, label %b5, label %b6

b5:                                               ; preds = %b4
  %str_ptr5 = alloca [1 x i8], align 1
  store [1 x i8] c"5", [1 x i8]* %str_ptr5, align 1
  %str_ptr6 = bitcast [1 x i8]* %str_ptr5 to i8*
  %new_string7 = call %string* @newString(i8* %str_ptr6, i32 1)
  call void @printString(%string* %new_string7)
  br label %b6

b6:                                               ; preds = %b5, %b4
  br i1 false, label %b7, label %b8

b7:                                               ; preds = %b6
  %str_ptr8 = alloca [1 x i8], align 1
  store [1 x i8] c"5", [1 x i8]* %str_ptr8, align 1
  %str_ptr9 = bitcast [1 x i8]* %str_ptr8 to i8*
  %new_string10 = call %string* @newString(i8* %str_ptr9, i32 1)
  call void @printString(%string* %new_string10)
  br label %b8

b8:                                               ; preds = %b7, %b6
  br i1 true, label %b9, label %b10

b9:                                               ; preds = %b8
  %str_ptr11 = alloca [1 x i8], align 1
  store [1 x i8] c"6", [1 x i8]* %str_ptr11, align 1
  %str_ptr12 = bitcast [1 x i8]* %str_ptr11 to i8*
  %new_string13 = call %string* @newString(i8* %str_ptr12, i32 1)
  call void @printString(%string* %new_string13)
  br label %b10

b10:                                              ; preds = %b9, %b8
  br i1 true, label %b11, label %b12

b11:                                              ; preds = %b10
  %str_ptr14 = alloca [1 x i8], align 1
  store [1 x i8] c"6", [1 x i8]* %str_ptr14, align 1
  %str_ptr15 = bitcast [1 x i8]* %str_ptr14 to i8*
  %new_string16 = call %string* @newString(i8* %str_ptr15, i32 1)
  call void @printString(%string* %new_string16)
  br label %b12

b12:                                              ; preds = %b11, %b10
  br i1 false, label %b13, label %b14

b13:                                              ; preds = %b12
  %str_ptr17 = alloca [1 x i8], align 1
  store [1 x i8] c"7", [1 x i8]* %str_ptr17, align 1
  %str_ptr18 = bitcast [1 x i8]* %str_ptr17 to i8*
  %new_string19 = call %string* @newString(i8* %str_ptr18, i32 1)
  call void @printString(%string* %new_string19)
  br label %b14

b14:                                              ; preds = %b13, %b12
  br i1 false, label %b15, label %b16

b15:                                              ; preds = %b14
  %str_ptr20 = alloca [1 x i8], align 1
  store [1 x i8] c"7", [1 x i8]* %str_ptr20, align 1
  %str_ptr21 = bitcast [1 x i8]* %str_ptr20 to i8*
  %new_string22 = call %string* @newString(i8* %str_ptr21, i32 1)
  call void @printString(%string* %new_string22)
  br label %b16

b16:                                              ; preds = %b15, %b14
  ret i32 0
}

