tests/snapshots/generated_from_inputs__good_concatenation.snap
---
source: tests/fixtures.rs
description: "// Author: Tomasz Wysocki 277696\nint main() {\n    printString(\"a\" + \"b\");\n    return 0;\n}\n"
input_file: inputs/good/concatenation.lat
---
; ModuleID = 'concatenation'
source_filename = "concatenation"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @main() {
b0:
  %str_ptr = alloca [1 x i8], align 1
  store [1 x i8] c"a", [1 x i8]* %str_ptr, align 1
  %str_ptr1 = bitcast [1 x i8]* %str_ptr to i8*
  %new_string = call %string* @newString(i8* %str_ptr1, i32 1)
  %str_ptr2 = alloca [1 x i8], align 1
  store [1 x i8] c"b", [1 x i8]* %str_ptr2, align 1
  %str_ptr3 = bitcast [1 x i8]* %str_ptr2 to i8*
  %new_string4 = call %string* @newString(i8* %str_ptr3, i32 1)
  %new_string5 = call %string* @stringConcat(%string* %new_string, %string* %new_string4)
  call void @printString(%string* %new_string5)
  ret i32 0
}

