tests/snapshots/generated_from_inputs__good_core002.snap
---
source: tests/fixtures.rs
description: "/* void expression as statement */\n\nint main() {\n  foo();\n  return 0 ;\n\n}\n\nvoid foo() {\n   printString(\"foo\");\n   return;\n}\n"
input_file: inputs/good/core002.lat
---
; ModuleID = 'core002'
source_filename = "core002"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define void @latte_user_foo() {
b0:
  %str_ptr = alloca [3 x i8], align 1
  store [3 x i8] c"foo", [3 x i8]* %str_ptr, align 1
  %str_ptr1 = bitcast [3 x i8]* %str_ptr to i8*
  %new_string = call %string* @newString(i8* %str_ptr1, i32 3)
  call void @printString(%string* %new_string)
  ret void
}

define i32 @main() {
b0:
  call void @latte_user_foo()
  ret i32 0
}

