tests/snapshots/generated_from_inputs__good_core003.snap
---
source: tests/fixtures.rs
description: "// Testing the return checker\n\nint f () {\n   if (true)\n     return 0;\n   else\n     {}\n}\n\nint g () {\n  if (false) \n      {}\n  else\n      return 0;\n}\n\nvoid p () {}\n  \n\nint main() {\n  p();\n  return 0;\n}\n"
input_file: inputs/good/core003.lat
---
; ModuleID = 'core003'
source_filename = "core003"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @latte_user_f() {
b0:
  ret i32 0
}

define i32 @latte_user_g() {
b0:
  ret i32 0
}

define i32 @main() {
b0:
  call void @latte_user_p()
  ret i32 0
}

define void @latte_user_p() {
b0:
  ret void
}

